--- a/02-Homework/Develop/assets/css/style.css
+++ b/02-Homework/Develop/assets/css/style.css
@@ -88,17 +88,17 @@ p {
 
 .benefit-lead {
     margin-bottom: 32px;
-    color: #ffffff;
+    color: black;
 }
 
 .benefit-brand {
     margin-bottom: 32px;
-    color: #ffffff;
+    color: black;
 }
 
 .benefit-cost {
     margin-bottom: 32px;
-    color: #ffffff;
+    color: black;
 }
 
 .benefit-lead h3 {
@@ -195,6 +195,6 @@ p {
     text-align: center;
 }
 
-.footer h2 {
+.footer h {
     font-size: 20px;
 }
